[gd_scene load_steps=11 format=2]

[ext_resource path="res://ConveyorSlot.tscn" type="PackedScene" id=1]
[ext_resource path="res://cubelib.tres" type="MeshLibrary" id=2]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://TestClub.tscn" type="PackedScene" id=4]
[ext_resource path="res://SpawnTimer.gd" type="Script" id=5]
[ext_resource path="res://ItemSpawner.gd" type="Script" id=6]
[ext_resource path="res://ConveyorSpawner.gd" type="Script" id=7]
[ext_resource path="res://ConveyorSpawnTimer.gd" type="Script" id=8]

[sub_resource type="Environment" id=1]

[sub_resource type="Curve3D" id=3]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 9, 2.61408, 13.474, 0, 0, 0, 0, 0, 0, 9, 2.61408, 3.474, 0, 0, 0, 0, 0, 0, 9, 2.61408, -0.525998, 0, 0, 0, 0, 0, 0, 9, 2.61408, -10.526 ),
"tilts": PoolRealArray( 0, 0, 0, 0 )
}

[node name="DemoScene" type="Spatial"]

[node name="ItemSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true
script = ExtResource( 5 )

[node name="ConveyorSpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true
script = ExtResource( 8 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 65532, 2, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 65532, 3, 0, 65533, 3, 0, 65534, 3, 0, 65535, 3, 0, 0, 4, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 65532, 4, 0, 65533, 4, 0, 65534, 4, 0, 65535, 4, 0, 0, 5, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 5, 0, 65532, 5, 0, 65533, 5, 0, 65534, 5, 0, 65535, 5, 0, 0, 65532, 0, 1, 65532, 0, 2, 65532, 0, 3, 65532, 0, 4, 65532, 0, 5, 65532, 0, 65532, 65532, 0, 65533, 65532, 0, 65534, 65532, 0, 65535, 65532, 0, 0, 65533, 0, 1, 65533, 0, 2, 65533, 0, 3, 65533, 0, 4, 65533, 0, 5, 65533, 0, 65532, 65533, 0, 65533, 65533, 0, 65534, 65533, 0, 65535, 65533, 0, 0, 65534, 0, 1, 65534, 0, 2, 65534, 0, 3, 65534, 0, 4, 65534, 0, 5, 65534, 0, 65532, 65534, 0, 65533, 65534, 0, 65534, 65534, 0, 65535, 65534, 0, 0, 65535, 0, 1, 65535, 0, 2, 65535, 0, 3, 65535, 0, 4, 65535, 0, 5, 65535, 0, 65532, 65535, 0, 65533, 65535, 0, 65534, 65535, 0, 65535, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.0118504, 0, -0.99993, 0, 1, 0, 0.99993, 0, 0.0118504, -3.98095, 3.24179, 2.67868 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.54537, 10.7458, 2.05376 )
omni_range = 14.9

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.717215, 0.696852, 0, -0.696852, 0.717215, 1.93409, 9.72012, 14.2796 )
fov = 70.4618

[node name="ItemSpawner" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.74714, 0 )
script = ExtResource( 6 )

[node name="ItemContainer" type="Node" parent="."]

[node name="TestClub" parent="ItemContainer" instance=ExtResource( 4 )]

[node name="ConveyorPath" type="Path" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.385915, -0.474002 )
curve = SubResource( 3 )

[node name="PathFollow" type="PathFollow" parent="ConveyorPath"]

[node name="ConveyorSpawner" type="Position3D" parent="ConveyorPath/PathFollow"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.58561, 3.73385, 14.2427 )
script = ExtResource( 7 )

[node name="ConveyorContainer" type="Node" parent="ConveyorPath/PathFollow"]

[node name="ConveyorSlot" parent="ConveyorPath/PathFollow/ConveyorContainer" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.44753, 3.88038, 13.9615 )
[connection signal="timeout" from="ItemSpawnTimer" to="ItemSpawnTimer" method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="ConveyorSpawnTimer" to="ConveyorSpawnTimer" method="_on_ConveyorSpawnTimer_timeout"]
